--- a/xssfinder-php-executor/composer.json
+++ b/xssfinder-php-executor/composer.json
@@ -24,9 +24,11 @@
         "leric/php-thrift": "0.9.0",
         "mindplay/annotations": "dev-master",
         "facebook/webdriver": "dev-master"
+
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*@dev",
-        "hafriedlander/phockito": "dev-master"
+        "hafriedlander/phockito": "dev-master",
+        "wiremock-php/wiremock-php": ">= 0.1.0"
     }
 }
